# maple

./: .gitignore  CMakeLists.txt
assets/shaders/: fragment.fs  vertex.vs
assets/shaders/light/: colors.fs
include/maple/editor/: editor.hpp
include/maple/runtime/: camera.h  path.h  shader.hpp
include/maple/utils/: check_gl.hpp
src/: main.cc
src/editor/: editor.cpp
src/runtime/: shader.cpp  stb_image.cc  utils.cpp
src/utils/: check_gl.cpp
